--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>13th East Bombay Scout Troop</title>
-</head>
+<head id="includes"></head>
 
 <body>
-    <h1>Hello World!</h1>
+    <header></header>
+    <main>
+        <h1>Hello World!</h1>
+    </main>
+    <footer></footer>
 </body>
+<script src="scripts/jQuery.min.js"></script>
+<script src="scripts/scripts.js"></script>
 
 </html>
