--- a/app/common/_footer.html
+++ b/app/common/_footer.html
@@ -3,40 +3,41 @@
         <div class="footernav">
             <ul class="nav nav-pills" id="pills-tab" role="tablist">
                 <li class="nav-item ml-0" role="presentation">
-                    <a class="nav-link active pl-0" id="pills-iot-tab" data-toggle="pill" href="#pills-iot" role="tab"
-                        aria-controls="pills-iot" aria-selected="true">Why Trace+</a>
+                    <a class="nav-link active pl-0" href="/">Home</a>
                 </li>
                 <li class="nav-item dots" role="presentation"></li>
                 <li class="nav-item" role="presentation">
-                    <a class="nav-link" id="pills-data-solutions-tab" data-toggle="pill" href="#pills-data-solutions"
-                        role="tab" aria-controls="pills-data-solutions" aria-selected="false">Trace+ Edge</a>
+                    <a class="nav-link" href="/why-scouting.html">Why Scouting</a>
                 </li>
                 <li class="nav-item dots" role="presentation"></li>
                 <li class="nav-item" role="presentation">
-                    <a class="nav-link pr-0" id="pills-app-interface-tab" data-toggle="pill" href="#pills-app-interface"
-                        role="tab" aria-controls="pills-app-interface" aria-selected="false">Pricing</a>
+                    <a class="nav-link pr-0" href="/gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item dots" role="presentation"></li>
                 <li class="nav-item" role="presentation">
-                    <a class="nav-link pr-0" id="pills-app-interface-tab" data-toggle="pill" href="#pills-app-interface"
-                        role="tab" aria-controls="pills-app-interface" aria-selected="false">About Us</a>
+                    <a class="nav-link pr-0" href="/about-us.html">About Us</a>
                 </li>
                 <li class="nav-item dots" role="presentation"></li>
                 <li class="nav-item" role="presentation">
-                    <a class="nav-link pr-0" id="pills-app-interface-tab" data-toggle="pill" href="#pills-app-interface"
-                        role="tab" aria-controls="pills-app-interface" aria-selected="false">FAQs</a>
+                    <a class="nav-link pr-0" href="/faq.html">FAQs</a>
+                </li>
+                <li class="nav-item dots" role="presentation"></li>
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link pr-0" href="/contact.html">Enroll Today</a>
                 </li>
             </ul>
         </div>
         <div class="contactinfo">
-            <span class="email">sales@traceplus.ai</span>
-            <span class="phone">contact@traceplus.ai</span>
+            <a class="email" href="mailto:13theast.activities@gmail.com">13theast.activities@gmail.com</a>
+            <a class="phone" href="tel:+919876543210">+919876543210</a>
         </div>
     </div>
     <div class="social-link">
-        <img class="facebook" src="../assets/facebook-f.svg">
-        <img class="linkedin" src="../assets/linkedin-in.svg">
-        <img class="twitter" src="../assets/twitter.svg">
+        <a target="_blank" href="https://www.facebook.com/groups/13theastbombayscoutgroup/"><img class="facebook"
+                src="../assets/facebook-f.svg"></a>
+        <a target="_blank" href="https://www.instagram.com/13theastbombay/"><img class="linkedin" src="../assets/Instagram.webp"></a>
+        <a target="_blank" href="https://www.youtube.com/c/13thEastBombayScoutGroup1936"><img class="twitter"
+                src="../assets/YouTube.webp"></a>
     </div>
 
 </div>
