--- a/app/common/_header.html
+++ b/app/common/_header.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="clear-fix d-lg-none"></div>
-    <a class="navbar-brand" href="#">
-        <img src="./assets/trace+logo.png" alt="logo" class="logo" />
+    <a class="navbar-brand" href="/">
+        <img src="./assets/logo.png" alt="logo" class="logo" />
     </a>
     <button class="navbar-toggler collapsed border-0" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,22 +12,22 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#why-traceplus">Why Trace+ </a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="#traceplus-edge">Trace+ Edge</a>
+                <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#pricing">Pricing</a>
+                <a class="nav-link" href="/why-scouting.html">Why Scouting</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#about-us">About Us</a>
+                <a class="nav-link" href="/gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#faq">FAQs</a>
+                <a class="nav-link" href="/about-us.html">About Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link contact-btn" href="#contact-us">Contact Us</a>
+                <a class="nav-link" href="/faq.html">FAQs</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link contact-btn" href="/contact.html">Enroll Today</a>
             </li>
         </ul>
     </div>
