--- a/app/common/_includes.html
+++ b/app/common/_includes.html
@@ -1,5 +1,6 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 <link rel="stylesheet" href="./styles/styles.css">
 <title>13th East Bombay Scout Troop</title>
