--- a/app/why-scouting.html
+++ b/app/why-scouting.html
@@ -6,7 +6,7 @@
 <body>
     <header></header>
     <main class="container-xl">
-        <h1>Hello World!</h1>
+        <h1>Why Scouting</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum necessitatibus, veniam voluptatibus
             voluptatem sequi minima excepturi earum incidunt quidem praesentium unde sit quod cupiditate nisi velit
             deserunt consectetur obcaecati illum!</p>
