fixed asset URLs

--- a/app/common/_footer.html
+++ b/app/common/_footer.html
@@ -34,10 +34,10 @@
     </div>
     <div class="social-link">
         <a target="_blank" href="https://www.facebook.com/groups/13theastbombayscoutgroup/"><img class="facebook"
-                src="../assets/facebook-f.svg"></a>
-        <a target="_blank" href="https://www.instagram.com/13theastbombay/"><img class="linkedin" src="../assets/Instagram.webp"></a>
+                src="./assets/facebook-f.svg"></a>
+        <a target="_blank" href="https://www.instagram.com/13theastbombay/"><img class="linkedin" src="./assets/Instagram.webp"></a>
         <a target="_blank" href="https://www.youtube.com/c/13thEastBombayScoutGroup1936"><img class="twitter"
-                src="../assets/YouTube.webp"></a>
+                src="./assets/YouTube.webp"></a>
     </div>
 
 </div>
