--- a/app/gallery.html
+++ b/app/gallery.html
@@ -332,7 +332,7 @@
   <script>
     $(document).ready(() => {
       // fetch(
-      //   "https://script.google.com/macros/s/AKfycbxGRmd3lUf11AbeB_vOBev8RJTkM6sLC6pyDT76KTYs/dev",{mode:"no-cors"}
+      //   "https://script.google.com/macros/s/AKfycbxGRmd3lUf11AbeB_vOBev8RJTkM6sLC6pyDT76KTYs/dev",
       // )
       //   .then((result) => result.json())
       //   .then((res) => {
@@ -341,24 +341,35 @@
       //     console.error("error ==> ",err)
       //   });
 
-      var SCRIPT_URL =
-        "https://script.google.com/macros/s/AKfycbxGRmd3lUf11AbeB_vOBev8RJTkM6sLC6pyDT76KTYs/dev";
-      // $.getJSON(SCRIPT_URL , {},function (data) {
-      //   console.log(data);
-      // });
-      fetch(SCRIPT_URL, {
-        method: "GET",
-        headers: {
-          "Content-Type": "text/plain;charset=utf-8",
-        },
-      })
-        .then((response) => {
-          console.log("success:", response);
-        })
-        .catch((err) => {
-          console.log("Error:" + err);
-        });
+    //   var SCRIPT_URL =
+    //     "https://www.googleapis.com/drive/v3/files?q='1qa5XfffNKvdD9ej8eqXbdQQkcFIebfxg'%20in%20parents&key=AIzaSyDDz--unOxLYU_Mi2WtJToQ6yCOLKgEtd8&pageSize=1000";
+    //   // $.getJSON(SCRIPT_URL , {},function (data) {
+    //   //   console.log(data);
+    //   // });
+    //   fetch(SCRIPT_URL, {
+    //     method: "GET",
+
+    //   })
+    //     .then((response) => {
+    //       console.log("success:", response);
+    //     })
+    //     .catch((err) => {
+    //       console.log("Error:" + err);
+    //     });
+   let data = getDriveFilesInFolder("1qa5XfffNKvdD9ej8eqXbdQQkcFIebfxg","AIzaSyDDz--unOxLYU_Mi2WtJToQ6yCOLKgEtd8");
+   console.log("data == ",data)
     });
+
+
+    async function getDriveFilesInFolder(folderId, apiKey) {
+  try {
+    const response = await fetch(`https://www.googleapis.com/drive/v2/files?q="${folderId}"+in+parents&key=${apiKey}`);
+    const data = await response.json();
+    return data.files;
+  } catch (error) {
+    console.error(error);
+  }
+}
 
     //drive code
     //     var _ = LodashGS.load();
